[package]
name = "renet_docker_test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# its version 0.10 but we need to use the rev because of a missing feature
steamworks = { git = "https://github.com/Noxime/steamworks-rs", rev = "a4dfe2a" }
log = "0.4.19"
renet = { git = "https://github.com/lucaspoffo/renet", branch = "master"}
renet_steam = { git = "https://github.com/lucaspoffo/renet", branch = "master"}
env_logger = "0.10.0"